--- a/index.html
+++ b/index.html
@@ -11,19 +11,21 @@
     <header>
         <h1>Awesome Books</h1>
     </header>
-   
-     <section>
+   <div class="container">
+       <section class="list-section">
+       </section>
      <form>
          <label for="title">
-            <input type="text" placeholder="title" />
+            <input type="text" id="title" placeholder="Title" required>
          </label>
         
          <label for="author">
-            <input type="text" placeholder="author"/>
+            <input type="text" id="author" placeholder="Author" required>
          </label>
         
          <button type="submit" value="Add"> Add</button>
      </form>
-    </section>
+    </div>
+    <script src="./script.js"></script>
 </body>
 </html>
