--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <header>
-        <h1>Awesome Books</h1>
+        
     </header>
    <div class="container">
        <section class="list-section">
        </section>
+       <div><h2>Add a new book</h2></div>
      <form>
          <label for="title">
             <input type="text" id="title" placeholder="Title" required>
