Refactor functions to class methods

--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <header>
-        
+        <h1>All Awesome Book</h1>
     </header>
    <div class="container">
        <section class="list-section">
        </section>
-       <div><h2>Add a new book</h2></div>
+       <hr> 
+       <span class="heading">Add a new book </span>
      <form>
          <label for="title">
             <input type="text" id="title" placeholder="Title" required>
@@ -24,7 +25,7 @@
             <input type="text" id="author" placeholder="Author" required>
          </label>
         
-         <button type="submit" value="Add"> Add</button>
+         <button type="submit"  class="btn-submit"> Add</button>
      </form>
     </div>
     <script src="./script.js"></script>
